--- a/side3.html
+++ b/side3.html
@@ -4,24 +4,22 @@
     <title>Tokvam Gard</title>
 	<meta charset=”utf-8">
           <link rel="stylesheet" type="text/css" href="style.css">
-
  </head>
   <body>
     <h1><u>Tokvam Gard</u></h1>
 <!--Teksten på siden-->
 	<p><b>Informasjon</b><br> 
-	Tokvam er en gard som ligg omtrent midt i Ruste. 
-	Garden eies av min mor, Randi Tokvam. 
-	Den har vert i mammas hender siden desember 2003. 
-	Etter mamma er det planlagt at jeg skal ta over.</p>
-	<p><img src="Tokvam Gard Vinter 2.jpg" alt="Bilde" width="750" height="350"></p>
-	<!--Her er en liste med linker-->
+	Det va litt om Tokvam Gard, å hva vi driver med der. </p>
+	<p>Takk for meg :)</p>
+	<p><img src="Gulla å Mia.jpg" alt="Bilde" width="500" height="300"></p>
+
+	
 	<p>Linker</p>
 	<ul>
   	  <li><a href="index.html">Informasjon</a></li>
   	  <li><a href="side2.html">Om produksjonen</a></li>
   	  <li><a href="side3.html">Takk for meg</a></li>
 	</ul>
-	
+  
   </body>
 </html>
